@@ -31,6 +31,7 @@ password =
 web_root =
 ssl = 0
 delay = 0
+wait_for = 5
 watch_dir =
 fork = default
 delete_failed = 0
